01-增加下载文件&更新readme

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,41 @@ train_gpt2.dSYM/Contents/Info.plist
 train_gpt2.dSYM/Contents/Resources/Relocations/aarch64/train_gpt2.yml
 gpt2_inference.dSYM/Contents/Info.plist
 gpt2_inference.dSYM/Contents/Resources/Relocations/aarch64/gpt2_inference.yml
+benchmark/datasets/CBTest/._BOOK_SPLIT.txt
+benchmark/datasets/CBTest/BOOK_SPLIT.txt
+benchmark/datasets/CBTest/LICENSE.txt
+benchmark/datasets/CBTest/README.txt
+benchmark/datasets/CBTest/data/cbt_test.txt
+benchmark/datasets/CBTest/data/cbt_train.txt
+benchmark/datasets/CBTest/data/cbt_valid.txt
+benchmark/datasets/CBTest/data/cbtest_CN_test_2500ex.txt
+benchmark/datasets/CBTest/data/cbtest_CN_train.txt
+benchmark/datasets/CBTest/data/cbtest_CN_valid_2000ex.txt
+benchmark/datasets/CBTest/data/cbtest_NE_test_2500ex.txt
+benchmark/datasets/CBTest/data/cbtest_NE_train.txt
+benchmark/datasets/CBTest/data/cbtest_NE_valid_2000ex.txt
+benchmark/datasets/CBTest/data/cbtest_P_test_2500ex.txt
+benchmark/datasets/CBTest/data/cbtest_P_train.txt
+benchmark/datasets/CBTest/data/cbtest_P_valid_2000ex.txt
+benchmark/datasets/CBTest/data/cbtest_V_test_2500ex.txt
+benchmark/datasets/CBTest/data/cbtest_V_train.txt
+benchmark/datasets/CBTest/data/cbtest_V_valid_2000ex.txt
+benchmark/datasets/CBTest/stats/._stats_all_CBT.txt
+benchmark/datasets/CBTest/stats/._stats_CN.txt
+benchmark/datasets/CBTest/stats/._stats_NE.txt
+benchmark/datasets/CBTest/stats/._stats_P.txt
+benchmark/datasets/CBTest/stats/._stats_V.txt
+benchmark/datasets/CBTest/stats/stats_all_CBT.txt
+benchmark/datasets/CBTest/stats/stats_CN.txt
+benchmark/datasets/CBTest/stats/stats_NE.txt
+benchmark/datasets/CBTest/stats/stats_P.txt
+benchmark/datasets/CBTest/stats/stats_V.txt
+benchmark/datasets/CBTest.tgz
+benchmark/datasets/lambada_control_test_data_plain_text.txt
+benchmark/datasets/lambada_development_plain_text.txt
+benchmark/datasets/lambada_test_plain_text.txt
+benchmark/datasets/lambada-dataset.tar.gz
+benchmark/datasets/lambada-vocab-2.txt
+benchmark/datasets/readme-up.txt
+benchmark/datasets/train-novels.tar
+benchmark/__pycache__/tokenize.cpython-39.pyc
